<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/input_layout">

        <EditText
            style="@style/editTextTheme"
            android:hint="@string/form_code"
            android:inputType="text"
            android:autofillHints="@string/form_code"
            android:id="@+id/bg_group_special_code"/>

        <EditText
            style="@style/editTextTheme"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/form_email"
            android:layout_below="@id/bg_group_special_code"
            android:id="@+id/bg_email_address"/>

        <EditText
            style="@style/editTextTheme"
            android:hint="@string/form_password"
            android:inputType="textPassword"
            android:autofillHints="@string/form_password"
            android:layout_below="@id/bg_email_address"
            android:id="@+id/bg_password"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_stay_logged_in"
            android:id="@+id/remember"
            android:drawableLeft="@drawable/btn_unchecked"
            android:drawableStart="@drawable/btn_unchecked"
            android:drawablePadding="10dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/form_forgot_pass"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_outline"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"
        android:textColor="@color/colorSecondary"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:id="@+id/signup"
        android:textColor="@color/colorSecondary"
        android:textStyle="normal"
        android:text="@string/form_no_account"
        android:textAllCaps="false"/>

</LinearLayout>