<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="24sp"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/input_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text"
            android:id="@+id/large_text"/>

        <EditText
            style="@style/editTextTheme"
            android:hint="@string/state"
            android:inputType="text"
            android:autofillHints="@string/state"
            android:layout_below="@id/large_text"
            android:id="@+id/bg_state"/>

        <EditText
            style="@style/editTextTheme"
            android:hint="@string/city"
            android:inputType="text"
            android:autofillHints="@string/city"
            android:layout_below="@id/bg_state"
            android:id="@+id/bg_city"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/skip"
            android:id="@+id/skip_btn"
            android:background="#00ffffff"
            android:textAllCaps="false"
            android:layout_below="@id/bg_city"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorSecondary"/>
    </RelativeLayout>
</LinearLayout>