<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_bg"
            android:contentDescription="@string/image_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_layout"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/recycler_top_pics"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu"
                    android:id="@+id/menu_icon"
                    android:contentDescription="@string/image_text"
                    android:background="@color/colorSecondary"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_layout"
                android:id="@+id/recycler_top_pics"
                android:padding="20dp"/>

        </RelativeLayout>


        <TextView
            style="@style/heading"
            android:text="@string/recycler_best_sellers"
            android:id="@+id/Text_best_sellers"
            android:layout_below="@id/top_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Text_best_sellers"
            android:id="@+id/recycler_best_sellers"
            android:padding="20dp"/>

        <TextView
            style="@style/heading"
            android:text="@string/genre"
            android:id="@+id/Text_geners"
            android:layout_below="@+id/recycler_best_sellers" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/Text_geners"
            android:scrollbars="none"
            android:paddingTop="20dp"
            android:id="@+id/geners_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

            <RelativeLayout
                android:layout_width="278dp"
                android:layout_height="201dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rectangle_blue">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/image_text"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/genere"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recycler_graphics"
                    android:layout_below="@id/imageView"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </RelativeLayout>

                <RelativeLayout
                    android:layout_width="278dp"
                    android:layout_height="201dp"
                    android:background="@drawable/rectange_orange">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:contentDescription="@string/image_text"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/genere"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recycler_graphics"
                        android:layout_below="@id/imageView2"
                        android:textColor="@color/colorPrimary"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textStyle="bold"/>


                </RelativeLayout>

            </LinearLayout>



        </HorizontalScrollView>


        <TextView
            style="@style/heading"
            android:text="@string/recycler_recently_viewed"
            android:id="@+id/Text_Recently_viewed"
            android:layout_below="@+id/geners_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Text_Recently_viewed"
            android:id="@+id/recycler_Recently_viewed"
            android:padding="20dp"/>

        <TextView
            style="@style/heading"
            android:text="@string/monthly_newsletter"
            android:id="@+id/Text_news_letter"
            android:layout_below="@+id/recycler_Recently_viewed" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_below="@id/Text_news_letter">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/news_letter_text"/>

            <EditText
                style="@style/editTextTheme"
                android:id="@+id/user_name"
                android:autofillHints="@string/user_name"
                android:inputType="text"
                android:hint="@string/form_name"
                android:layout_below="@id/textView1" />

            <EditText
                style="@style/editTextTheme"
                android:id="@+id/user_email"
                android:autofillHints="@string/form_email"
                android:inputType="textEmailAddress"
                android:layout_below="@id/user_name"
                android:hint="@string/form_email" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/gradient_btn"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/user_email"/>
        </RelativeLayout>

    </RelativeLayout>


</ScrollView>